(lang dune 2.8)
(name compiler-libs-opttoplevel)

(generate_opam_files true)

(license ISC)
(source (github NathanReb/compiler-libs-opttoplevel))
(maintainers "Nathan Rebours <nathan.p.rebours@gmail.com>")
(authors "Nathan Rebours <nathan.p.rebours@gmail.com>")

(package
 (name compiler-libs-opttoplevel)
 (synopsis "META file for OCaml native toplevel"))
